--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,14 @@ body {
     font-family: 'Montserrat', sans-serif;
     position: relative;
     -webkit-tap-highlight-color: transparent;
+    -webkit-text-size-adjust: 100%;
+    background-image: linear-gradient(to right, #8e2de2 0%, #4a00e0 50%, #FFFFFF 50%, #FFFFFF 100%);
 }
 
 main {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: linear-gradient(to right, #8e2de2 0%, #4a00e0 50%, #FFFFFF 50%, #FFFFFF 100%);
 }
 
 .date {
